--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=doctor-appointment-spring-boot-starter
-groupId=com.demo
+artifactId=tools-doctor-appointment-auto-configure
+groupId=com.demo.tools
 version=1.0-SNAPSHOT
